[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtnls_oct"
version = "0.1.0"
description = "Package for OCT data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Eyened Team", email = "k.vangarderen@erasmusmc.nl"}
]
keywords = ["oct", "retinal-analysis", "medical-imaging", "ophthalmology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib==3.*",
    "scipy==1.*",
    "scikit-image==0.*",
    "scikit-learn==1.*",
    "pandas==2.*",
    "opencv-python==4.*",
    "pydicom",
]

[project.optional-dependencies]
eyened = [
    "eyened_orm",
]
worker = [
    "celery>=5.3.0",
    "kombu>=5.3.0",  # Required for RabbitMQ
]

[project.scripts]
rtnls-oct-worker = "worker.run_worker:main"

[project.urls]
Homepage = "https://github.com/eyened/retinalysis-oct"
Repository = "https://github.com/eyened/retinalysis-oct"
Documentation = "https://github.com/eyened/retinalysis-oct#readme"
"Bug Tracker" = "https://github.com/eyened/retinalysis_octissues"

[tool.setuptools]
packages = ["rtnls_oct"]
include-package-data = true
zip-safe = false

